Bug 12734. Make check for duplicate insertions debug-only. Thanks to zee@northrock.bm